# correction

./: .gitignore  1_cv.csv  1_sub.csv  CMakeLists.txt  DisjSet.h  README.md  build.bat  correct.h  correction.cpp  correction.sln  correction.vcxproj  correction.vcxproj.filters  curveFit.m  file.h  findRect.h  fit.txt  getLine.h  imgRemap.h  list.txt  mergeRect.h  myHead.h  pretreat.h
old/: imRemap.h
